--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>project</groupId>
-  <artifactId>calculator</artifactId>
+  <artifactId>wezvaweb</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>calculator</name>
+  <name>wezvaweb</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -47,7 +47,7 @@
         <configuration>
           <failOnMissingWebXml>false</failOnMissingWebXml>
         </configuration>
-</plugin>
+        </plugin>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
